<resources>
    <string name="app_name">Canopy</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your student ID and password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_hibiscus">HibiscusActivity</string>

    <string name="action_settings">Settings</string>
    <string name="library_url">http://14.139.198.171/api/hibi/library_books</string>
    <string name="ebooks_url">http://14.139.198.171/api/hibi/ebooks</string>
    <string name="ebooksdata_url">http://14.139.198.171/api/hibi/ebook_data</string>
    <string name="fees_url">http://14.139.198.171/api/hibi/fee</string>
    <string name="search_url">http://14.139.198.171/api/hibi/student</string>
    <string name="photo_url">https://hib.iiit-bh.ac.in/Hibiscus/docs/iiit/Photos/</string>
    <string name="course_url">http://14.139.198.171/api/hibi/mycourse</string>
    <string name="subgrades_url">http://14.139.198.171/api/hibi/sub_grades</string>
    <string name="notice_url">http://14.139.198.171/api/hibi/notice</string>
    <string name="noticedata_url">http://14.139.198.171/api/hibi/notice_data</string>
    <string name="view_grades_url">http://14.139.198.171/api/hibi/view_grades</string>
    <string name="att_url">http://14.139.198.171/api/hibi/attendence</string>
    <string name="cnd_url">http://14.139.198.171/api/hibi/course_notice_data</string>
    <string name="dcrypter">https://us-central1-iiitcloud-e9d6b.cloudfunctions.net/dcryptr?pass=</string>
    <string name="cn_url">http://14.139.198.171/api/hibi/course_notice</string>
    <string name="login_url">http://14.139.198.171/api/hibi/login_test</string>
    <string name="moocs_url">http://14.139.198.171/api/hibi/moocs</string>
    <string name="complains_url">http://14.139.198.171/api/hibi/complaint</string>
    <string name="pc_url">http://14.139.198.171/api/hibi/complaint_post</string>
    <string name="app_ad_id">ca-app-pub-5827006149924215~5640626183</string>
    <string-array name="semester">
        <item>Select semester</item>
        <item>1st semester</item>
        <item>2nd semester</item>
        <item>3rd semester</item>
        <item>4th semester</item>
        <item>5th semester</item>
        <item>6th semester</item>
        <item>7th semester</item>
        <item>8th semester</item>
    </string-array>
    <string name="whatsnew">
        * Student Noticeboard is restructured and now fully functional.
        * Only 50 notices at a time is removed.
        * Realtime search feature in noticeboard.
        * Bookmark your important notices.
        * Bug fixes
    </string>
</resources>
