<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.anmol.hibiscus.LoginActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/hibif"

            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="StudentID"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/MyEditTextTheme"
                android:textAlignment="center"

                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/MyEditTextTheme"
                android:textAlignment="center"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/round_button"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/google_sign_in"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:visibility="gone" />


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/round_button"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone" />

        <!-- Link to Login Screen -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not yet registered?"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign up and login with your hibiscus credentials!!!"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textColor="@color/colorPrimary"
            android:background="@color/white"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"

            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="invisible"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

